# operation-system

lab1-thread-creation/: CMakeLists.txt  QaA.docx  QaA.txt  main.c
lab2-pthread-join/: CMakeLists.txt  QaA.docx  main.c
lab3-params/: CMakeLists.txt  main.c
